Fix error: Loader shifted for a few mm juste after the begining

--- a/src/stylesheets/components/Molecules/_loadScreen.scss
+++ b/src/stylesheets/components/Molecules/_loadScreen.scss
@@ -8,6 +8,7 @@
   justify-content: center;
 
   height: 100dvh;
+  width: 100dvw;
 
   &--inactive {
     display: none;
